[package]
name = "hi"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { version = "1", features = ["span-locations"] }
quote = "1"
syn = { version = "1", features = ["full"] }
async-std = { version = "1", optional = true }
tokio = { version = "1", features = ["rt"], optional = true }

[features]
async-std = ["dep:async-std"]
tokio = ["dep:tokio"]
